# hybridPorousInterFoamV9

./: .gitignore  CMakeLists.txt  README.md  UEqn.H  correctPhi.H  createFields.H  createPorousMediaFields.H  hybridPorousInterFoam.C  initCorrectPhi.H  pEqn.H  updateVariables.H
Make/: options
libraries/porousModels/capillarityModels/BrooksAndCorey/: pcBrooksAndCorey.C
libraries/porousModels/capillarityModels/VanGenuchten/: pcVanGenuchten.H
libraries/porousModels/lnInclude/: krBrooksAndCorey.C  krBrooksAndCorey.H  krVanGenuchten.C  krVanGenuchten.H  relativePermeabilityModel.C  relativePermeabilityModel.H  relativePermeabilityModelNew.C
libraries/porousModels/relativePermeabilityModels/BrooksAndCorey/: krBrooksAndCorey.C
testCase/0/: K  U  UnonWetting  Uwetting  alpha.wetting.orig  eps.orig  p
testCase/constant/: g  transportProperties
testCase/system/: controlDict  setFieldsDict
